accessibility fixes: submit button label; main landmark; color contrast issues; table fixes

--- a/src/components/scss/custom.scss
+++ b/src/components/scss/custom.scss
@@ -75,6 +75,9 @@ button:focus {
   box-shadow: 0 0 0 0.2rem rgba(51, 51, 51, 0.25) !important;
 }
 
+.text-light {
+  color: #fff !important;
+}
 
 // links
 p, ul li, ol li {
